cabal-version: 2.0

author: Mitchell Rosen
build-type: Simple
category: Prelude
description:
  Planet Mitchell.
  .
  This package provides a curated, highly unstable collection of reorganized
  re-exports. Mostly for personal use at the moment, me but please poke around
  and see README.md for a bit more information ;)
  .
  A note on module names:
  .
  /Partial/ means the module contains partial functions that may throw
  exceptions if preconditions are violated.
  .
  /Unsafe/ means the module contains unsafe functions that either:
  .
  * assume that preconditions hold, e.g. @unsafeEmailAddress@, which constructs
    an @EmailAddress@ from a @ByteString@ that is assumed to be valid.
  .
  * do other suspicious things like interleave @IO@ with evaluation, as
    @unsafePerformIO@, or lie to the type checker, as @unsafeCoerce@. In a word,
    dragons.
license-file: LICENSE
license: BSD3
maintainer: Mitchell Rosen <mitchellwrosen@gmail.com>
name: planet-mitchell
synopsis: Planet Mitchell
tested-with: GHC == 8.4.3, GHC == 8.4.4, GHC == 8.6.1, GHC == 8.6.5
version: 1.0.0
homepage: https://github.com/mitchellwrosen/planet-mitchell
bug-reports: https://github.com/mitchellwrosen/planet-mitchell/issues
copyright: (c) 2018-2019, Mitchell Rosen

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/planet-mitchell.git

library
  hs-source-dirs: src
  ghc-options:
    -Weverything
    -fno-warn-safe
    -fno-warn-unsafe
    -- TODO re-enable
    -fno-warn-missing-import-lists
  default-extensions: NoImplicitPrelude
  default-language: Haskell2010

  build-depends:
      base                        >= 4.11    && < 4.12.1
    , async                       >= 2.2.2   && < 2.2.3
    , bytestring                  >= 0.10.8  && < 0.10.9
    , compactable                 >= 0.1.2   && < 0.1.3
    , containers                  >= 0.6.1   && < 0.6.2
    , contravariant               >= 1.4.1   && < 1.5.3
    , deepseq                     >= 1.4.3   && < 1.4.5
    , distributive                >= 0.5.3   && < 0.6.1
    , exceptions                  >= 0.10.0  && < 0.10.3
    , extra                       >= 1.6.16  && < 1.6.18
    , filepath                    >= 1.4.2   && < 1.4.3
    , generic-lens                >= 1.1.0   && < 1.1.1
    , hashable                    >= 1.2.7   && < 1.3.1
    , lens                        >= 4.16.1  && < 4.17.1
    , mtl                         >= 2.2.2   && < 2.2.3
    , parallel                    >= 3.2.2.0 && < 3.2.3
    , primitive                   >= 0.6.4   && < 0.6.5
    , profunctors                 >= 5.2     && < 5.4.0
    , reflection                  >= 2.1     && < 2.1.5
    , semigroupoids               >= 5.3.1   && < 5.3.2
    , semigroups                  >= 0.18.4  && < 0.18.6
    , stm                         >= 2.4.5   && < 2.5.1
    , tagged                      >= 0.8.6   && < 0.8.7
    , text                        >= 1.2.3   && < 1.2.4
    , time                        >= 1.8     && < 1.9.4
    , transformers                >= 0.5.5   && < 0.5.7
    , transformers-base           >= 0.4.5   && < 0.4.6
    , unliftio                    >= 0.2.11  && < 0.2.12
    , unordered-containers        >= 0.2.10  && < 0.2.11
    , vector                      >= 0.12.0  && < 0.12.1

  exposed-modules:
    Alg.Alternative
    Alg.Applicative
    Alg.Category
    Alg.Compactable
    Alg.Contravariant
    Alg.Decidable
    Alg.Distributive
    Alg.Divisible
    Alg.Foldable
    Alg.Foldable.Partial
    Alg.Functor
    Alg.Groupoid
    Alg.Monad
    Alg.Monad.Base
    Alg.Monad.Fail
    Alg.Monad.Fix
    Alg.Monad.Plus
    Alg.Monad.Trans
    Alg.Monad.Zip
    Alg.Monoid
    Alg.Profunctor
    Alg.Semigroup
    Alg.Semigroupoid
    Alg.Traversable
    Bits
    Bool
    Bounded
    ByteString
    ByteString.Latin1
    ByteString.Latin1.Partial
    ByteString.Lazy
    ByteString.Lazy.Builder
    ByteString.Lazy.Latin1
    ByteString.Partial
    ByteString.Short
    ByteString.Short.Partial
    Char
    Char.Partial
    Clock
    Coerce
    Coerce.Unsafe
    Concurrency
    Concurrency.IORef
    Concurrency.MVar
    Concurrency.QSem
    Concurrency.TBQueue
    Concurrency.TChan
    Concurrency.TMVar
    Concurrency.TSem
    Concurrency.TVar
    Data
    Debug
    Dynamic
    Eff.Mtl.Cont
    Either
    Enum
    Environment
    Equality
    Error
    Eval
    Exception
    Field
    File
    File.Binary
    File.Text
    Function
    Generic
    Graph.Adjacency
    Hashable
    IO
    IO.Unsafe
    Label
    Lang.C
    List
    List.NonEmpty
    List.NonEmpty.Partial
    List.Partial
    Map
    Map.Hash
    Map.Int
    Map.Int.Lazy
    Map.Lazy
    Maybe
    Maybe.Partial
    MaybeT
    Mitchell.Prelude
    Num.Complex
    Num.Double
    Num.Float
    Num.Floating
    Num.Fractional
    Num.Int
    Num.Integer
    Num.Integral
    Num.Nat
    Num.Natural
    Num.Num
    Num.Product
    Num.Ratio
    Num.Real
    Num.RealFloat
    Num.RealFrac
    Num.Sum
    Num.Word
    Optic.Fold
    Optic.Fold.Unsafe
    Optic.Getter
    Optic.Getting
    Optic.Iso
    Optic.Lens
    Optic.Prism
    Optic.Review
    Optic.Setter
    Optic.Traversal
    Ord
    Parallelism
    Predicate
    Prim
    Printf
    Proxy
    Ptr
    Ptr.Foreign
    Ptr.Fun
    Ptr.Stable
    Ptr.Static
    Ptr.Weak
    Read
    Read.Partial
    Reflection
    RuntimeSystem
    ST
    Sequence
    Set
    Set.Hash
    Set.Int
    Show
    StableName
    Storable
    Symbol
    System
    Tagged
    Text
    Text.Lazy
    Text.Lazy.Builder
    Text.Partial
    Time
    Tree
    Tuple
    Type
    Typeable
    Vector
    Vector.Generic
    Vector.Generic.Mutable
    Vector.Mutable
    Vector.Primitive
    Vector.Storable
    Vector.Unboxed
    Void

-- benchmark semaphore
--   hs-source-dirs: bench
--   main-is: Semaphore.hs
--   ghc-options: -Wall
--   type: exitcode-stdio-1.0
--   ghc-options: -O -rtsopts -threaded "-with-rtsopts=-N4 -qg"
--   build-depends: planet-mitchell
--   default-language: Haskell2010
